--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "next": "12.3.1",
+    "node-fetch": "^3.2.10",
     "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
