--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "checkformat": "yarn prettier --check ."
   },
   "dependencies": {
+    "autoprefixer": "^10.4.12",
     "next": "12.3.1",
     "node-fetch": "^3.2.10",
+    "postcss": "^8.4.17",
     "prettier": "^2.7.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
     "@types/node": "18.7.23",
