--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-fetch": "^3.2.10",
     "postcss": "^8.4.17",
     "prettier": "^2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.1.8"
