--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "next start",
     "lint": "next lint",
     "format": "yarn prettier --write .",
-    "checkformat": "yarn prettier --check ."
+    "checkformat": "yarn prettier --check .",
+    "import-latest-dump": "ts-node ./scripts/import-latest-dump.ts"
   },
   "dependencies": {
     "@types/lodash": "^4.14.186",
@@ -30,11 +31,14 @@
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
+    "@tsconfig/node16": "^1.0.3",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
+    "dotenv": "^16.0.3",
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
+    "ts-node": "^10.9.1",
     "typescript": "4.8.4"
   }
 }
