--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mysql2": "^2.3.3",
     "next": "12.3.1",
     "node-fetch": "^3.2.10",
+    "php-unserialize": "^0.0.1",
     "postcss": "^8.4.17",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
