chore: add docker-compose example

--- a/.env.local.sample
+++ b/.env.local.sample
@@ -1,4 +1,5 @@
-DB_HOST=XXXXXXX
-DB_USER=XXXXXXX
-DB_PWD=XXXXXXX
-DB_NAME=XXXXXXX
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_USER=user
+DB_PWD=password
+DB_NAME=nosdeputes
