--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "node": "16.17.1",
-    "yarn": "1.22.19"
+    "node": ">=16",
+    "yarn": ">=1.22"
   },
   "scripts": {
     "dev": "next dev",
