--- a/package.json
+++ b/package.json
@@ -21,14 +21,14 @@
     "kysely": "^0.22.0",
     "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
-    "next": "12.3.1",
+    "next": "^13.0.2",
     "node-fetch": "^3.2.10",
     "php-unserialize": "^0.0.1",
     "postcss": "^8.4.17",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
@@ -38,7 +38,7 @@
     "@types/react-dom": "18.0.6",
     "dotenv": "^16.0.3",
     "eslint": "8.24.0",
-    "eslint-config-next": "12.3.1",
+    "eslint-config-next": "^13.0.2",
     "ts-node": "^10.9.1",
     "typescript": "4.8.4"
   }
