--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "jest",
     "lint": "next lint",
     "format": "yarn prettier --write .",
     "checkformat": "yarn prettier --check .",
@@ -32,6 +33,9 @@
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@tsconfig/node16": "^1.0.3",
     "@types/node": "18.7.23",
     "@types/react": "18.0.21",
@@ -39,6 +43,8 @@
     "dotenv": "^16.0.3",
     "eslint": "8.24.0",
     "eslint-config-next": "^13.0.2",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "ts-node": "^10.9.1",
     "typescript": "4.8.4"
   }
