--- a/.github/workflows/fetch-deputes-photos.yaml
+++ b/.github/workflows/fetch-deputes-photos.yaml
@@ -3,7 +3,7 @@ name: Fetch deputes photos
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 3 * * 0' # every sunday at 3h
+    - cron: '0 3 * * *' # every day at 3h
 
 jobs:
   fetch:
