--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   },
   "dependencies": {
     "@types/lodash": "^4.14.186",
+    "@types/pg": "^8.6.5",
     "autoprefixer": "^10.4.12",
     "kysely": "^0.22.0",
     "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
     "next": "^13.0.2",
     "node-fetch": "^3.2.10",
+    "pg": "^8.8.0",
     "php-unserialize": "^0.0.1",
     "postcss": "^8.4.17",
     "prettier": "^2.7.1",
