--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "prettier-plugin-tailwindcss": "^0.1.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-svgmt": "^1.2.0",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
