--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "analyze-nosdeputes-visits": "ts-node ./scripts/analyze-nosdeputes-visits.ts"
   },
   "dependencies": {
+    "@react-hook/mouse-position": "^4.1.3",
     "@types/lodash": "^4.14.186",
     "autoprefixer": "^10.4.12",
     "kysely": "^0.22.0",
