--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-svgmt": "^1.2.0",
+    "recharts": "^2.2.0",
     "tailwindcss": "^3.1.8"
   },
   "devDependencies": {
